# ModalMixLab

./: AI_Agent  README.md
AI_Agent/LangChain/: youtube_search_x_langgraph.ipynb
AI_Agent/LangChain/ambient/: audio_analysis.py
AI_Agent/LangChain/ambient_music_agent/: README.md
AI_Agent/LangChain/youtube/: Youtube_Search_x_LangGraph.ipynb
AI_Agent/ambient_music_agent/: ambient_music_agent.py  output.json
agent_with_tool/: README.md  agent_custom_tools.py  bigquery_search_tool.py  bigquery_write_tool.py  requirements.txt  spotify_search_tool.py  twitter_post_tool.py  youtube_search_tool.py
agent_with_tool/.streamlit/: config.toml
langgraph/langgraph-media-api-agent/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  spotify_playlist_tool.py  spotify_search_tool.py  youtube_search_tool.py
langgraph/langgraph-media-api-agent/media_agent/: agent.py
langgraph/langgraph-media-api-agent/media_agent/utils/: nodes.py  tools.py
vison_llm/: pvporcupine_test.py  vison_llm.py  vison_llm_gemini.py
vison_llm/gemini/: README.md  vison_llm_gemini.py  vison_llm_gemini_voice_plus.py  vison_llm_gemini_voice_plus_en.py
